--- a/.github/workflows/build-promtail-release.yaml
+++ b/.github/workflows/build-promtail-release.yaml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Download the promtail-${{matrix.arch}} artefact
+      - name: Download the promtail-${{matrix.arch}} artifact
         uses: actions/download-artifact@v3
         with:
           name: promtail-${{matrix.arch}}
@@ -152,41 +152,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: tag
     steps:
-      - name: Download the artefacts
+      - name: Download the artifacts
         uses: actions/download-artifact@v3
         with:
-          path: .
-      - name: List artefacts
+          path: artifacts
+      - name: List artifacts
         run: |
           find .
+      - name: Prepare artifacts for release
+        run: |
+          mkdir release
+          for f in artifacts/promtail-*; do cp "${f}/promtail" "release/$(basename ${f})"; done
       - name: Create GitHub release
         uses: ncipollo/release-action@v1
         with:
           name: "Promtail ${{inputs.release}}"
           body: |
             Statically-linked builds for Promtail, based on the [upstream '${{inputs.release}}'](https://github.com/grafana/loki/releases/tag/${{inputs.release}}) release of the `grafana/loki` project.
-          artifacts: ./**
+          artifacts: release/*
           tag: promtail-${{inputs.release}}
           token: ${{ secrets.GITHUB_TOKEN }}
-
-  publish:
-    name: Publish Promtail binaries to CharmHub
-    runs-on: ubuntu-latest
-    needs: release
-    strategy:
-      matrix:
-        arch: [amd64] # [amd64, arm64]
-    steps:
-      - name: Install charmcraft
-        run: |
-          sudo snap install charmcraft --classic
-      - name: Download the promtail-${{matrix.arch}} artefact
-        uses: actions/download-artifact@v3
-        with:
-          name: promtail-${{matrix.arch}}
-          path: .
-      - name: Upload ${{matrix.arch}} resource revision to CharmHub
-        env:
-          CHARMCRAFT_AUTH: ${{ secrets.CHARMHUB_TOKEN }}
-        run: |
-          charmcraft upload-resource loki-k8s promtail-${{matrix.arch}} --file promtail-${{matrix.arch}}      
